# moderation-website

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deployment.yaml  pyproject.toml  tox.ini
.github/: dependabot.yml
azure-pipelines/: build-pipeline.yml  release-pipeline.yml
moderationwebsite/: __init__.py  __main__.py  constants.py
moderationwebsite/static/: style.css
moderationwebsite/templates/: 403.html  404.html  500.html  base.html  error.html  index.html
