[tool.poetry]
name = "moderationwebsite"
version = "0.1.0"
description = ""
authors = ["Cyber Discovery Community <triggerhappymods@cyberdiscoverycommunity.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
Flask-Discord = "^0.1.60"

[tool.poetry.dev-dependencies]
flake8 = "^3.6.0"
flake8-bandit = "^2"
flake8-bugbear = "^20"
flake8-import-order = "^0.18"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4"
flake8-todo = "^0.7"
flake8-formatter-junit-xml = "^0.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
